Wed Feb 27 23:02:55 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkhandlebox.c (gtk_handle_box_realize): minor code cleanup

Wed Feb 27 14:58:12 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenubar.c (gtk_menu_bar_size_request/allocate): 
	Don't reserve space for border when the shadow type
	for the menubar is "none". (#61843)

	* gtk/gtkmenubar.c (gtk_menu_bar_size_allocate): Fix
	offset for right-justified menu items.

Wed Feb 27 14:45:21 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktoolbar.c (gtk_toolbar_size_allocate): Go
	back to old style of drawing children over the bevel.
	(#58615)

Wed Feb 27 14:08:26 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/imxim.c: Add ko and zh to the locales
	where this is the default.

Wed Feb 27 12:34:21 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkiconfactory.c: Register all stock icons
	"unscaled" so that we don't have icons only available
	at some sizes. (#68896)

Wed Feb 27 11:59:05 2002  Owen Taylor  <otaylor@redhat.com>

	Some ASCII vs. locale fixes from Darin Adler (#55837)

	* gtk/gtkcombo.c (gtk_combo_find): Implement real
	case-insensitive comparison using g_utf8_casefold().

	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): Fix
	assignment of gunichar to char by replacing g_unichar_totitle
	with g_ascii_toupper ... the contents would only be ascii
	here anyways.

	* gdk/x11/gdkim-x11.c (_gdk_x11_initialize_locale) 
	* gtk/gtkfontsel.c (gtk_font_selection_show_available_fonts): 
	Replace a calls to g_strcasecmp() with g_ascii_strcasecmp().

2002-02-27  Hans Breuer  <hans@breuer.org>

	* demos/gtk-demo/makefile.msc.in : new file

	* gdk-pixbuf/gtk-pixbuf.rc.in : new file to include
	  version resource
	* gdk-pixbuf/makefile.msc : create and use gdk-pixbuf.res

	* gdk/win32/gdkkeys-win32.c : handle undefined LANG_URDU,
	(gdk_keyval_name) : fix endless looping

	* gtk/gtkfilesel.c : translate_win32_path() static
	* gtk/queryimmodules : print_escaped(), query_module() static
